# giant-newsletter

./: .coverage  .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  settings.py  setup.cfg
.github/workflows/: build-test.yml
newsletter/: admin.py  cms_apps.py  cms_plugins.py  context_processors.py  forms.py  models.py  urls.py  views.py
newsletter/migrations/: 0001_initial.py  0002_auto_20200623_1442.py  0003_auto_20200916_0730.py  0004_add_climatecare_fields.py
newsletter/templates/: index.html  newsletter_index.html
newsletter/templates/newsletter/: index.html  plugin.html
newsletter/tests/: conftest.py  test_cms_apps.py  test_models.py  test_views.py  urls.py
tests/: test_giant_newsletter.py
