[tool.poetry]
name = "giant-newsletter"
version = "0.3.5"
description = "A small reusable package that adds a Newsletter app to a project"
authors = ["Will-Hoey <will.hoey@giantmade.com>", "Ben-Armstead <ben.armstead@giantmade.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/giantmade/giant-newsletter"
repository = "https://github.com/giantmade/giant-newsletter"
keywords = ["newsletter", "app"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

include = [
    "LICENSE",
]
packages = [
    { include = "newsletter" }
]

[tool.poetry.dependencies]
python = "^3.9"
giant-mixins = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
django = "^3.2.16"
django-cms = "^3.11.0"
black = "^22.12.0"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
six = "^1.15.0"

[[tool.poetry.source]]
name = "TestPyPi"
url = "https://test.pypi.org/simple/"
secondary = true

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"
